--- a/application/language/index.html
+++ b/application/language/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>403 Forbidden</title>
+	<title>Happy Spoon Yoghurt</title>
 </head>
 <body>
 
-<p>Directory access is forbidden.</p>
+<p>Directory access.</p>
 
 </body>
 </html>
